[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/pop_effect.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/water_drop.png" type="Texture" id=2]
[ext_resource path="res://Assets/flowers.png" type="Texture" id=3]
[ext_resource path="res://Engine/Plant/Plant.gd" type="Script" id=4]
[ext_resource path="res://Engine/Plant/Growing.gd" type="Script" id=5]
[ext_resource path="res://Engine/Plant/Producing.gd" type="Script" id=6]

[sub_resource type="Curve" id=1]
max_value = 6.0
_data = [ Vector2( 0, 3.13636 ), 0.0, -0.173056, 0, 0, Vector2( 0.981013, 5.89091 ), -1.8281, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 1.0
orbit_velocity_random = 0.0
linear_accel = -100.0
radial_accel = 100.0
tangential_accel = 100.0
scale_curve = SubResource( 2 )

[sub_resource type="CircleShape2D" id=4]
radius = 23.7942

[sub_resource type="Animation" id=5]
resource_name = "water"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("WaterDrop:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WaterDrop:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.6, 0.6 ), Vector2( 0.7, 0.7 ), Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WaterDrop:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, -20 ), Vector2( 12, -18 ), Vector2( 12, -16 ), Vector2( 12, -14 ), Vector2( 12, -12 ), Vector2( 12, -10 ), Vector2( 12, -8 ), Vector2( 12, -6 ), Vector2( 12, -5 ), Vector2( 12, -4 ), Vector2( 12, -3 ) ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 14.0

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0.0113208, 0.481818 ), 0.0, 0.336152, 0, 0, Vector2( 0.74717, 1 ), 3.80383, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 5.0
gravity = Vector3( 0, -1, 0 )
initial_velocity = 80.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -85.0
damping = 100.0
scale = 2.0
scale_curve = SubResource( 8 )
color = Color( 0.482353, 0.784314, 0.658824, 1 )

[node name="BasePlant" type="Node2D" groups=[
"plants",
]]
script = ExtResource( 4 )

[node name="ProductionTimer" type="Timer" parent="."]
one_shot = true

[node name="GrowthTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 3 )
vframes = 5
hframes = 3

[node name="WaterDrop" type="Sprite" parent="."]
position = Vector2( 12, -20 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="PopEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="PopParticles" type="Particles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
explosiveness = 0.5
randomness = 0.5
process_material = SubResource( 3 )

[node name="CharacterDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterDetector"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/water = SubResource( 5 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 6 )

[node name="States" type="Node" parent="."]

[node name="Growing" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Producing" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="ProducedParticles" type="Particles2D" parent="."]
emitting = false
amount = 15
lifetime = 0.5
process_material = SubResource( 9 )
[connection signal="timeout" from="ProductionTimer" to="." method="_on_ProductionTimer_timeout"]
[connection signal="timeout" from="GrowthTimer" to="." method="_on_GrowthTimer_timeout"]
[connection signal="body_entered" from="CharacterDetector" to="." method="_on_CharacterDetector_body_entered"]
[connection signal="body_exited" from="CharacterDetector" to="." method="_on_CharacterDetector_body_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_HitBox_body_exited"]
